# Backend/swagger.json
@@ -1039,6 +1039,29 @@
         }
       }
     },
+    "/api/user/admin/users/{id}/impersonate": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/view-history": {
       "get": {
         "tags": [
